--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,15 @@
   /* box-sizing: border-box; */
   outline: none;
 }
+
+:root {
+  --background-color: #eee;
+}
+
+[data-theme="dark"] {
+  --background-color: #333;
+}
+
+body {
+  background-color: var(--background-color);
+}
